--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,7 +13,7 @@
             "packages": "libudunits2-dev,libxtst6,libxt6,libmagick++-dev,chromium,libproj-dev,gdal-bin,libgdal-dev"
         },
         "ghcr.io/rocker-org/devcontainer-features/r-packages:1": {
-            "packages": "github::rstudio/renv,here,httpgd,box,ggplot2,lintr"
+            "packages": "github::rstudio/renv,here,httpgd,box,ggplot2,lintr,forecast"
         },
 		"ghcr.io/rocker-org/devcontainer-features/rstudio-server": {},
         "ghcr.io/rocker-org/devcontainer-features/miniforge:2": {}
